[gd_scene load_steps=13 format=3 uid="uid://w1c1anvracgl"]

[ext_resource type="Shader" path="res://Scenes/Levels/2dPerspectiveShader.gdshader" id="1_og0mq"]
[ext_resource type="Texture2D" uid="uid://1mb2krsst0k7" path="res://Scenes/Card_Images/cardBack.png" id="2_meuw0"]
[ext_resource type="Script" path="res://Scripts/cardFlipEvent.gd" id="3_yvtrw"]
[ext_resource type="Texture2D" uid="uid://ggk3u1ayqxcx" path="res://Scenes/Card_Images/Cucco.png" id="4_7260o"]
[ext_resource type="Texture2D" uid="uid://buja6bbb4aoi7" path="res://Scenes/Card_Images/card_highlight.png" id="5_3pf8v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7diek"]
resource_local_to_scene = true
shader = ExtResource("1_og0mq")
shader_parameter/fov = 25.0
shader_parameter/cull_back = false
shader_parameter/y_rot = 8.55e-06
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="Animation" id="Animation_phc6c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flipLocked")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s4b6s"]
resource_name = "flip_to_Back"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-1, 0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.6, 1.6), Vector2(1.6, 1.6), Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/y_rot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 18.0, 90.0, 162.0, 180.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Front:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, -1, -1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:flipLocked")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_omuiw"]
resource_name = "flip_to_front"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, -1, -1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.6, 1.6), Vector2(1.6, 1.6), Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/y_rot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [8.55e-06, 16.0, 90.0, 162.0, 180.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Front:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-1, 0, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:flipLocked")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ebs3g"]
resource_name = "new_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0at1"]
_data = {
"RESET": SubResource("Animation_phc6c"),
"flip_to_Back": SubResource("Animation_s4b6s"),
"flip_to_front": SubResource("Animation_omuiw"),
"new_animation": SubResource("Animation_ebs3g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmep8"]
size = Vector2(120, 200)

[node name="Card" type="Sprite2D"]
z_as_relative = false
material = SubResource("ShaderMaterial_7diek")
position = Vector2(609, 278)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_meuw0")
region_rect = Rect2(8, 30.5, 101, 89.5)
script = ExtResource("3_yvtrw")

[node name="Front" type="Sprite2D" parent="."]
z_index = -1
z_as_relative = false
texture_filter = 5
use_parent_material = true
texture = ExtResource("4_7260o")

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
z_as_relative = false
use_parent_material = true
texture = ExtResource("5_3pf8v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0at1")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wmep8")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
